games are developed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- External CSS -->
   <link rel="stylesheet" href="styles.css">
-  <title>Website Example 1</title>
+  <title>Pinaki Prasanna Das</title>
 </head>
 
 <body>
@@ -29,24 +29,25 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">About Pinaki <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#about-pinkai">About Pinaki <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Take a look at Pinu's creations</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#play-the-game">Play the game</a>
+            <a class="nav-link" href="#resume">Resume</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Contact Pinaki
+              Others
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#"><i class="font-image contact fa fa-phone-square"></i> Contact</a>
+              <a class="dropdown-item" href="#contact">Contact Pinaki</a>
+              <a class="dropdown-item" href="#play-the-game">Play games</a>
+              <a class="dropdown-item" href="#pinu's-creation">Take a look at Pinu's creations</a>
+
+              <!-- <a class="dropdown-item" href="#"><i class="font-image contact fa fa-phone-square"></i> Contact</a>
               <a class="dropdown-item" href="#"><i class="font-image mail fa fa-envelope"></i> Email</a>
               <a class="dropdown-item" href="#"><i class="font-image facebook fa fa-facebook-square"></i> Facebook</a>
               <a class="dropdown-item" href="#"><i class="font-image twitter fa fa-twitter"></i> Twitter</a>
-              <a class="dropdown-item" href="#"><i class="font-image instagram fa fa-instagram"></i> Instagram</a>
+              <a class="dropdown-item" href="#"><i class="font-image instagram fa fa-instagram"></i> Instagram</a> -->
             </div>
           </li>
         </ul>
@@ -55,14 +56,77 @@
   </section>
 
   <!-- About Pinaki -->
-  <section class="about-pinkai">
+  <section id="about-pinkai">
     <div class="about-me">
       <p>Hello everyone. I am <span class="name">Pinaki Prasanna Das (Pinu)</span>.</p>
     </div>
   </section>
 
+  <!-- Resume -->
+  <section id="resume">
+
+    <div class="flex-container">
+      <div>
+        <h2>Education</h2>
+        <h4>WHAT I'VE LEARNED</h4><br>
+        <ol>
+          <li>
+            <h5>2018 - Present</h5>
+            <p>B.Tech in Information Technology in College of Engineering and Technology (CET), Ghatikia, Bhubaneswar, Odisha.</p>
+          </li>
+          <li>
+            <h5>2016 - 2018</h5>
+            <p>+2 Science in Buxi Jagabandhu Bidyadhar (BJB) Mahabidyalaya, Bhubaneswar, Odisha.</p>
+          </li>
+          <li>
+            <h5>2005 - 2016</h5>
+            <p>School studies in Saraswati Shishu Vidya Mandir (SSVM), Niladri Vihar, Chandrasekharpur, Bhubaneswar, Odisha.</p>
+          </li>
+        </ol>
+      </div>
+      <div>
+        <h2>Internships</h2>
+        <h4>WHERE I'VE INTURNED</h4><br>
+        <ol>
+          <li>
+            <h5>Internship in web development at Spectrum Club, CET, BBSR, Odisha</h5>
+            <p>In three different stages I prepared a project named <strong>"Eratos"</strong> in which I made three floor maps with suitable CSS and JS lines.</p>
+          </li>
+        </ol>
+      </div>
+      <div>
+        <h2>Previous Work Experiences</h2>
+        <h4>WHERE I'VE WORKED</h4><br>
+        <p>Currenlt I'm a student. So not any real work Experience.</p>
+      </div>
+    </div>
+<!-- 
+    <br><br><br>
+
+    <div class="flex-container">
+      <div>
+        <h2>Skills</h2>
+        <ol>
+          <li>C</li>
+          <li>JAVA</li>
+          <li>Full Stack Web Development</li>
+          <li>Mobile App Development</li>
+        </ol>
+      </div>
+      <div>
+        <h2>Languages</h2>
+        <ol>
+          <li>Odia</li>
+          <li>Hindi</li>
+          <li>English</li>
+        </ol>
+      </div>
+    </div> -->
+
+  </section>
+
   <!-- Pinu's Creations -->
-  <section class="pinu's-creation">
+  <section id="pinu's-creation">
 
   </section>
 
@@ -121,7 +185,7 @@
   </section>
 
   <!-- Contacts -->
-  <section id="contacts">
+  <section id="contact">
 
   </section>
 
