--- a/love calculator.html
+++ b/love calculator.html
@@ -1,10 +1,53 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Love Calculator Game</title>
-  </head>
-  <body>
+<!doctype html>
+<html lang="en">
 
-  </body>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  <!-- External CSS -->
+  <link rel="stylesheet" href="love calculator.css">
+
+  <title>Love Calculator</title>
+</head>
+
+<body>
+  <section id="love-calculator">
+    <div class="love-calculator-game">
+      <h1 class="heading"><em><i class="font-image fa fa-heart" aria-hidden="true"></i> Welcome to the <span class="love-calculator">Love Calculator</span> game <i class="font-image fa fa-heart" aria-hidden="true"></i></em></h1>
+      <h4>Enter your name and your partner's name. Then refresh the page and you will see the result i.e. how much you love your partner.</h4>
+      <div class="container">
+        <div class="row">
+          <div class="col col-lg-6 col-md-6 col-sm-12">
+            <label for="your-name">Your Name</label><br>
+            <input type="text" name="your-name" placeholder="Your name">
+          </div>
+          <div class="col col-lg-6 col-md-6 col-sm-12">
+            <label for="partner-name">Your Partner's Name</label><br>
+            <input type="text" name="partner-name" placeholder="Partner's name">
+          </div>
+        </div>
+      </div>
+      <button type="button" class="btn btn-lg btn-dark">Play</button>
+      <h1 class="result">Result</h1>
+    </div>
+
+  </section>
+
+
+  <!-- Optional JavaScript -->
+  <script src="love calculator.js" charset="utf-8"></script>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</body>
+
 </html>
